<resources>
    <string name="app_name">ModernArt</string>
    <string name="app_name_title">Modern Art UI</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">More information</string>
    <string name="dialog_message">Hey, Do you want go to MOMA?</string>
    <string name="dialog_title">MOMA information</string>
    <string name="ok">Yes MOMA</string>
    <string name="cancel">Not Now</string>
    <string name="hue">Hue</string>
    <string name="saturation">Saturation</string>
    <string name="value">Value</string>
    <string name="hsvAbout">About HSV</string>
    <string name="zero">->0</string>
    <string name="one">->1</string>
</resources>
